--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ compile 'javax.servlet:javax.servlet-api:4.0.1'
 compile 'org.springframework:spring-core:5.0.8.RELEASE'
 compile 'org.springframework:spring-beans:5.0.8.RELEASE'
 compile 'mysql:mysql-connector-java:8.0.11'
+compile 'org.springframework:spring-orm:4.2.2.RELEASE'
+
+
 testCompile 'junit:junit:4.12'
 }
 
